--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ts-node": "^10.9.2"
   },
   "scripts": {
-    "test": "cucumber-js test"
+  "generate": "bddgen",
+  "test": "npm run generate && playwright test"
   }
 }
