--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:bs": "cross-env TARGET=bs npm test"
   },
   "dependencies": {
-    "dotenv": "^17.2.0"
+    "dotenv": "^17.2.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0"
   }
 }
